# universal-optimizer-lib-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
include/algorithm/: Algorithm.hpp  Optimizer.hpp  OutputControl.hpp
include/algorithm/exact/total_enumeration/: TeOperationsSupport.hpp  TeOptimizer.hpp
include/algorithm/metaheuristic/: AdditionalStatisticsControl.hpp  FinishControl.hpp  Metaheuristic.hpp  PopulationBasedMetaheuristic.hpp  SingleSolutionMetaheuristic.hpp
include/algorithm/metaheuristic/genetic_algorithm/: GaCrossoverSupport.hpp  GaCrossoverSupportIdle.hpp  GaCrossoverSupportIdleBitArray.hpp  GaCrossoverSupportOnePointBitArray.hpp  GaMutationSupport.hpp  GaMutationSupportIdle.hpp  GaMutationSupportIdleBitArray.hpp  GaMutationSupportOnePointBitArray.hpp  GaOptimizer.hpp  GaOptimizerGenerational.hpp  GaOptimizerSteadyState.hpp  GaSelection.hpp  GaSelectionIdle.hpp  GaSelectionRoulette.hpp
include/algorithm/metaheuristic/monte_carlo/: MonteCarloOptimizer.hpp
include/algorithm/metaheuristic/simulated_annealing/: SaNeighborhood.hpp  SaNeighborhoodBitArray.hpp  SaNeighborhoodInt.hpp  SaOptimizer.hpp  SaTemperature.hpp
include/algorithm/metaheuristic/variable_neighborhood_search/: VnsLocalSearchSupport.hpp  VnsLocalSearchSupportIdle.hpp  VnsLocalSearchSupportStandardBestImprovementBitArray.hpp  VnsLocalSearchSupportStandardBestImprovementInt.hpp  VnsLocalSearchSupportStandardFirstImprovementBitArray.hpp  VnsLocalSearchSupportStandardFirstImprovementInt.hpp  VnsOptimizer.hpp  VnsShakingSupport.hpp  VnsShakingSupportIdle.hpp  VnsShakingSupportStandardBitArray.hpp  VnsShakingSupportStandardInt.hpp
include/problem/: MaxOnesProblem.hpp  Problem.hpp
include/solution/: BitArraySolution.hpp  QualityOfSolution.hpp  Solution.hpp
include/utils/: ComplexCounterUniformAscending.hpp
src/algorithm/: Algorithm.cpp  Optimizer.cpp  OutputControl.cpp
src/algorithm/exact/total_enumeration/: TeOptimizer.cpp
src/algorithm/metaheuristic/: AdditionalStatisticsControl.cpp  FinishControl.cpp  Metaheuristic.cpp  PopulationBasedMetaheuristic.cpp  SingleSolutionMetaheuristic.cpp
src/algorithm/metaheuristic/genetic_algorithm/: GaCrossoverSupportIdle.cpp  GaCrossoverSupportIdleBitArray.cpp  GaCrossoverSupportOnePointBitArray.cpp  GaMutationSupportIdle.cpp  GaMutationSupportIdleBitArray.cpp  GaMutationSupportOnePointBitArray.cpp  GaOptimizer.cpp  GaOptimizerGenerational.cpp  GaOptimizerSteadyState.cpp  GaSelectionIdle.cpp  GaSelectionRoulette.cpp
src/algorithm/metaheuristic/monte_carlo/: MonteCarloOptimizer.cpp
src/algorithm/metaheuristic/simulated_annealing/: SaNeighborhoodBitArray.cpp  SaNeighborhoodInt.cpp  SaOptimizer.cpp  SaTemperature.cpp
src/algorithm/metaheuristic/variable_neighborhood_search/: VnsLocalSearchSupportIdle.cpp  VnsLocalSearchSupportStandardBestImprovementBitArray.cpp  VnsLocalSearchSupportStandardBestImprovementInt.cpp  VnsLocalSearchSupportStandardFirstImprovementBitArray.cpp  VnsLocalSearchSupportStandardFirstImprovementInt.cpp  VnsOptimizer.cpp  VnsShakingSupportIdle.cpp  VnsShakingSupportStandardBitArray.cpp  VnsShakingSupportStandardInt.cpp
src/problem/: MaxOnesProblem.cpp  Problem.cpp
src/solution/: BitArraySolution.cpp  QualityOfSolution.cpp  Solution.cpp
src/utils/: ComplexCounterUniformAscending.cpp
tests/: test_core.cpp  test_ga.cpp  test_monte_carlo.cpp  test_sa.cpp  test_sa_debug.cpp  test_vns.cpp
